--- a/Project-Spaced-Repetition-Tracker/index.html
+++ b/Project-Spaced-Repetition-Tracker/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Project-Spaced-Repetition-Tracker</title>
     <script type="module" src="script.js"></script>
   </head>
   <body>
