--- a/Project-Spaced-Repetition-Tracker/index.html
+++ b/Project-Spaced-Repetition-Tracker/index.html
@@ -2,9 +2,7 @@
 <html>
    <head>
       <title>Space Repetition Tasks</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-
-      
+        <link rel="stylesheet" type="text/css" href="style.css"/>  
    </head>
    <body>
       <h1>Space Repetition Tasks</h1>
@@ -19,7 +17,7 @@
 
       <!-- Form Inputs -->
       <div id="agenda">
-         <form id="topcform">
+         <form id="topicform">
             <label for="taskName">Task Name </label>
             <input type="text" id="taskName" name="taskName" required />
 
