--- a/Project-Spaced-Repetition-Tracker/index.html
+++ b/Project-Spaced-Repetition-Tracker/index.html
@@ -2,7 +2,9 @@
 <html>
    <head>
       <title>Space Repetition Tasks</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>  
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+
+      
    </head>
    <body>
       <h1>Space Repetition Tasks</h1>
@@ -17,7 +19,7 @@
 
       <!-- Form Inputs -->
       <div id="agenda">
-         <form id="topicform">
+         <form id="topcform">
             <label for="taskName">Task Name </label>
             <input type="text" id="taskName" name="taskName" required />
 
