Installing Jest Test Files and calculateRevisionDates Test

--- a/Project-Spaced-Repetition-Tracker/index.html
+++ b/Project-Spaced-Repetition-Tracker/index.html
@@ -2,9 +2,7 @@
 <html>
    <head>
       <title>Space Repetition Tasks</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-
-      
+      <link rel="stylesheet" type="text/css" href="style.css" />
    </head>
    <body>
       <h1>Space Repetition Tasks</h1>
@@ -19,14 +17,14 @@
 
       <!-- Form Inputs -->
       <div id="agenda">
-         <form id="topcform">
+         <form id="topicForm">
             <label for="taskName">Task Name </label>
             <input type="text" id="taskName" name="taskName" required />
 
             <label for="taskDate">Date</label>
             <input type="date" id="taskDate" name="taskName" required />
 
-            <label for="subTask">Submit</label>
+            <label for="subTask"></label>
             <button type="submit" id="subTask">Add Task</button>
          </form>
       </div>
@@ -51,6 +49,6 @@
             </tbody>
          </table>
       </div>
-        <script type="module" src="script.js"></script>
+      <script type="module" src="script.js"></script>
    </body>
 </html>
